🐛 fixes the button text color on iOS
it was displaying as blue, instead of black

--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ button.primary {
   font-size: 1rem;
   border: none;
   background-color: #fde74cff;
+  color: #040404;
   font-family: "Tomorrow", sans-serif;
 }
 
